07/03/2003 Bob Rossi <bob@brasko.net>

	* tgdb.h: Updating interface for .4.0 ( comments only )

07/03/2003 Bob Rossi <bob@brasko.net>
	
	* tgdb.h: Updating interface for .4.0 ( comments only )

07/02/2003 Bob Rossi <bob@brasko.net>
	
	* tgdb.h: Prototyped interface for .4.0 ( comments only )

07/02/2003 Bob Rossi <bob@brasko.net>

	* tgdb.h: Adding commands tgdb_run_client_command
	tgdb_set_breakpoint_file_line. Remove tgdb_send command. It is now a
	static command internal to libtgdb. In place of it, all functions will be
	exported.
	* types.h: Added enum tgdb_command,enum tgdb_breakpoint_action
	* tgdb.c: Implent functions above.
	* gdbmi_tgdb.h: Add gdbmi_tgdb_return_client_command,
	gdbmi_tgdb_client_modify_breakpoint
	* gdbmi_tgdb.c: Implement above.
	* a2-tgdb.h: Add a2_tgdb_client_modify_breakpoint,
	a2_tgdb_return_client_command
	* a2-tgdb.c: Implemented above.

07/02/2003 Bob Rossi <bob@brasko.net>

	* Added testsuite directory: No more regression!

06/28/2003 Bob Rossi <bob@brasko.net>

	* TODO: Changed requirements for .4.0 and .5.0

06/27/2003 Bob Rossi <bob@brasko.net>

	* TODO: Changed requirements for .4.0

version 0.3.2 (06/25/2003):

06/12/2003 Bob Rossi <bob_rossi@cox.net>

	* types.h: Removed comment

06/04/2003 Bob Rossi <bob_rossi@cox.net>

    * changed interface for tgdb: It now returns atomic commands.
    These commands are self contained. The gui can now act on one
    command from tgdb instead of waiting for several.

06/01/2003 Bob Rossi <bob_rossi@cox.net>

    * tgdb.c: tgdb_initialize now uses fs_util in a more usefull way.
    calling fs_util_create_dir_in_base instead of fs_util_create_dir.

06/01/2003 Bob Rossi <bob_rossi@cox.net>
    
    * First big step at generalizing the protocol used to communicate
      with gdb and the main loop used to send commands to it.
      This is a first step at getting multiple types of communication
      to work with gdb ( annotate 2, gdbmi, possibly even annotate 1).